# gray

./: .gitignore  Cargo.toml  ReadMe.md  test.gray  test2.gray
.github/workflows/: rust.yml
crates/built_in_functions/: Cargo.toml
crates/built_in_functions/src/: array.rs  debug.rs  gray_interp.rs  io.rs  lib.rs  math.rs
crates/c_api/: Cargo.toml  my_header.h
crates/c_api/src/: lib.rs
crates/gray/: Cargo.toml  gray_header.h
crates/gray/src/: error_printer.rs  lib.rs
crates/gray/src/built_in_functions/: array.rs  debug.rs  gray_interp.rs  io.rs  math.rs  mod.rs
crates/gray/src/builtins/: array.rs  debug.rs  gray_interp.rs  io.rs  math.rs  mod.rs
crates/gray/src/bytecode/: code_block.rs  generator.rs  mod.rs  register.rs
crates/gray/src/compiler/: compiler.rs  mod.rs  pretty_print_bytecode.rs
crates/gray/src/interop/: mod.rs  (+5 more)
examples/: oop_array.gray  simple_repl.gray
src/: main.rs  value.rs
src/bytecode/: code_block.rs  generator.rs  instructions.rs  interpreter.rs  label.rs  mod.rs  register.rs
src/bytecode/instructions/: comparison.rs  jump.rs  math.rs  mod.rs  object.rs  other.rs
src/compiler/: compiler.rs
src/interpreter/: function_pointer.rs  interpreter.rs  mod.rs  object.rs  value.rs
src/parser/: lexer.rs  parser.rs
tests/: array_test.gray  basic_test.gray  break_continue_test.gray  functions_handles_test.gray  if_statement_test.gray  io_test.gray  lib.rs  loops_test.gray  math_precedence_test.gray  math_test.gray  namespace_test.gray  object_test.gray  struct_test.gray  test.gray  test_fail.gray  variable_arguments_test.gray
(+18 files in other folders)
