[package]
name = "c_api"
version = "0.1.0"
authors = ["Mathias Danielsen <mathiasda98@gmail.com>"]
edition = "2018"

[lib]
name = "c_api"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gray = { path = "../gray" }